<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_register">

    <ImageButton
        android:id="@+id/select_friends_panel_exit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_press"
        android:src="@drawable/ic_hardware_keyboard_backspace"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/bootstra_blue"
        fontPath="fonts/Roboto-Light.ttf"
        android:text="@string/select_friends"
        android:gravity="start|center_vertical"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/select_friends_panel_exit"
        android:layout_toRightOf="@+id/select_friends_panel_exit"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoice"
        android:layout_below="@+id/select_friends_panel_exit"
        android:layout_above="@+id/createMessageSend"
        android:id="@android:id/list"
        android:divider="@color/list_view_text"
        android:dividerHeight="0dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="18sp"
        fontPath="fonts/Roboto-Thin.ttf"
        android:textColor="@color/list_view_text"
        android:text="@string/no_friends"
        android:id="@android:id/empty"
        android:layout_gravity="start|center_vertical"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/createMessageSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        bootstrap:bb_icon_right="fa-rocket"
        android:text="@string/send"
        bootstrap:bb_type="primary" />

</RelativeLayout>